--- a/可变序列类型.md
+++ b/可变序列类型.md
@@ -20,7 +20,7 @@
 
 在引用区域里存放的是实际对象的引用，并非实际对象。
 
-
+![](/assets/3)
 
 python列表支持原位改变，也就是：
 
@@ -32,7 +32,7 @@ python列表支持原位改变，也就是：
 
 这个过程，在我们内存中是怎么发生的呢？
 
-
+![](/assets/4)
 
 那我们继续想，如果此时有一个数值等于2的变量，他是不是和列表下标为1的指向同一个对象呢？我们可以验证一下：
 
@@ -48,7 +48,7 @@ True
 
 这说明变量z和列表下标为1的指向了同一内存中的对象。前面我们也讲过0-255之间的都有共享引用的特性，也就是说无论把对象2放在列表里还是放在变量里都是指向同一个对象。
 
-
+![](/assets/5)
 
 3\) 列表支持的常用的操作：
 
@@ -106,15 +106,11 @@ b. 列表的特殊操作：
 
 \['Tom', 'Peter', 'Jerry’\]
 
-
-
 &gt;&gt;&gt; scores.sort\(reverse=True\) \#反向排序
 
 &gt;&gt;&gt; scores
 
 \[99, 88, 66\]
-
-
 
 &gt;&gt;&gt; scores
 
@@ -127,8 +123,6 @@ b. 列表的特殊操作：
 &gt;&gt;&gt; sorted\(people, key=lambda n:n\[1\]\) \#假设每个名字都是n，n\[1\]代表名字的第二个元素排序
 
 \['Peter', 'Jerry', 'Tom’\]
-
-
 
 4）可变序列的通用操作：
 
@@ -148,8 +142,6 @@ b. 改变某个范围的值：s\[start:end\] = t,这里注意t也必须是一个
 
 \[2, 4, 6, 8, 10, 12, 14, 16, 18, 4, 5, 6, 7, 8, 9, 10\]
 
-
-
 &gt;&gt;&gt; s\[:5\] = \[999\]
 
 &gt;&gt;&gt; s
@@ -157,8 +149,6 @@ b. 改变某个范围的值：s\[start:end\] = t,这里注意t也必须是一个
 \[999, 12, 14, 16, 18, 4, 5, 6, 7, 8, 9, 10\]
 
 注意，这样操作会将原列表元素个数降低，因为你只给了一个元素。这个元素会提前等号左边的所有元素。
-
-
 
 &gt;&gt;&gt; l = list\(range\(1,11\)\)
 
@@ -170,9 +160,11 @@ b. 改变某个范围的值：s\[start:end\] = t,这里注意t也必须是一个
 
 Traceback \(most recent call last\):
 
-  File "&lt;pyshell\#37&gt;", line 1, in &lt;module&gt;
+File "&lt;pyshell\#37&gt;", line 1, in &lt;module&gt;
 
-    l\[::2\] = \[99\]
+```
+l\[::2\] = \[99\]
+```
 
 ValueError: attempt to assign sequence of size 1 to extended slice of size 5
 
@@ -294,7 +286,7 @@ n. 复制序列：
 
 通过上面例子可以看出，若通过直接=赋值的方式复制一个相同的序列的时候，其实两个序列共享了引用，也就意味着其中一个被改变的时候，另一个也在被改变。
 
-
+![](/assets/6)
 
 但是这可能不是你想要的结果，如果只复制序列内容，而不是共享引用呢？
 
@@ -344,5 +336,5 @@ n. 复制序列：
 
 \[0, 1, 2, 3\]
 
-
+![](/assets/7)
 
