--- a/序列类型.md
+++ b/序列类型.md
@@ -1,2 +1,4 @@
-在学习序列类型之前，要关注一点：某些方法或者函数到底是针对某一个序列的方法，还是针对某一个分类的方法，比如对所有可变序列都通用。还是全局函数。这个在学习的过程中要关注。
+# 在学习序列类型之前，要关注一点：某些方法或者函数到底是针对某一个序列的方法，还是针对某一个分类的方法，比如对所有可变序列都通用。还是全局函数。这个在学习的过程中要关注。
+
+
 
