--- a/变量.md
+++ b/变量.md
@@ -10,7 +10,7 @@
 
 当我们需要反复引用内存中的某些值的时候，给值起一个名字即变量，可以方便操作。
 
-5. 变量命名规则补充：1）变量名之间不能有空格 2）避免和python里的关键字/函数名一样 3）区别大小写，并且只有在类命名的时候首字母才大写，
+5.变量命名规则补充：1）变量名之间不能有空格 2）避免和python里的关键字/函数名一样 3）区别大小写，并且只有在类命名的时候首字母才大写，
 
 其他情况都用小写
 
@@ -22,7 +22,7 @@
 
 2）动态类型：python中变量本身没有类型约束，其类型是根据赋值给变量的字面值类型决定的，可跟着赋值的字面值类型动态改变。
 
-也就是说python的对象是自带类型说明的，这个类型也决定了能对这个变量进行什么样的操作。
+也就是说python的对象是自带类型说明的，这个类型也决定了能对这个变量进行什么样的操作。8.
 
 8. 变量的存储：
 
