--- a/变量.md
+++ b/变量.md
@@ -22,9 +22,9 @@
 
 2）动态类型：python中变量本身没有类型约束，其类型是根据赋值给变量的字面值类型决定的，可跟着赋值的字面值类型动态改变。
 
-也就是说python的对象是自带类型说明的，这个类型也决定了能对这个变量进行什么样的操作。8.
+也就是说python的对象是自带类型说明的，这个类型也决定了能对这个变量进行什么样的操作。
 
-1. 变量的存储：
+8.变量的存储：
 
 1）我们可以将内存分成两部分：第一部分是变量表，第二部分是内存存储区；
 
