--- a/不可变序列类型.md
+++ b/不可变序列类型.md
@@ -2,7 +2,7 @@
 
 （一）元组
 
-1.     元组：tuple，用圆括号\(\)表示
+1. 元组：tuple，用圆括号\(\)表示
 
 和列表的相同点：
 
@@ -20,19 +20,19 @@
 
 2） 列表支持任意长度改变，元组是固定长度；
 
-2.     元组声明：
+1. 元组声明：
 
 ![](/assets/1.png)
 
-3.     元组元素访问：也是通过\[索引\]来访问
+1. 元组元素访问：也是通过\[索引\]来访问
 
 ![](/assets/2.png)
 
-4.     元组子元组访问：
+1. 元组子元组访问：
 
 ![](/assets/3.png)
 
-5.     通过+连接：
+1. 通过+连接：
 
 ![](/assets/4.png)
 
@@ -48,13 +48,13 @@
 
 这说明变量t指向了一个新的元组，也就是连接后的元组。与元组本身不可变的特性并不冲突。
 
-6.     支持‘\*数字’进行重复：
+1. 支持‘\*数字’进行重复：
 
 ![](/assets/7.png)
 
-7.     下一个章节讲的不管是对可变序列还是不可变序列都适用的操作在元组里也适用。
+1. 下一个章节讲的不管是对可变序列还是不可变序列都适用的操作在元组里也适用。
 
-8.     接下来我们来看几个实际上是元组特性的代码例子：
+2. 接下来我们来看几个实际上是元组特性的代码例子：
 
 ![](/assets/8.png)
 
@@ -70,17 +70,15 @@
 
 注意一个细节，序列里不包含5.
 
-2. range也是一个类型，是不可变序列，不支持原位改变：
+1. range也是一个类型，是不可变序列，不支持原位改变：
 
 ![](/assets/10.png)
 
-3. 对于序列的通用操作也适用于range类型。
-
- 
+1. 对于序列的通用操作也适用于range类型。
 
 ![](/assets/11.png)
 
-4. range类型的声明：
+1. range类型的声明：
 
 1）参数只有1个，代表终止数值，此数值并不包括在序列里。
 
@@ -98,109 +96,95 @@
 
 1. 字面值声明：
 
-
+![](/assets/14.png)
 
 注意三引号字符串：保存多行信息。
 
-2. 换行转移字符：\n，Tab空格：\t
+1. 换行转移字符：\n，Tab空格：\t
 
+![](/assets/15.png)
 
-
-
+![](/assets/16.png)
 
 1） 在声明字符的时候，\的出现总会被理解成和后面字符形成转移字符。如果就想单纯打印\有2种方法：
 
 a.     第一种方法，\\
 
-
+![](/assets/17.png)
 
 其中注意一下呈现效果的差别：在字符串中还是按照原方式输出，但是在print打印中会表达出想要的效果。
 
 b.     第二种方法：在声明字符串的时候前面加一个r，代表忽略转义字符
 
-
+![](/assets/18.png)
 
 2）\a 响铃， \b退格，\r回车
 
 3）\”\’，转义双引号或者单引号
 
-
+![](/assets/19.png)
 
 4）\?转义？，\0空字符，\o声明一个八进制字符，\x声明一个十六进制字符。
 
 5）s = b’ASCII码’b表示后面的字符串是以字节的形式表示的
 
+![](/assets/20.png)
 
+![](/assets/21.png)
 
-
-
-3. 字符串str的常用操作：
+1. 字符串str的常用操作：
 
 1）首先字符串常用操作中肯定包含对于那些不管是可变序列还是不可变序列都适用的操作，在下一个章节有解释。
 
+![](/assets/22.png)
 
+![](/assets/23.png)
 
+![](/assets/24.png)
 
-
-
-
-
+![](/assets/25.png)
 
 2） 专门针对字符串所设定的操作，通过字符串内置方法实现：
 
 a.     全局函数str\(\)
 
-
+![](/assets/26.png)
 
 b.     虽然字符串属于不可变序列，也就代表不能进行原位改变和长度增加，但是字符串内置了很多方法可以实现同样的效果，生成了一个新的字符串。
 
 短字符替代：
 
-
+![](/assets/27.png)
 
 长字符替换：
 
-
+![](/assets/28.png)
 
 replace\(参数1，参数2，\[参数3\]\)方法返回的是一个新的字符串
 
-
+![](/assets/29.png)
 
 通过赋值来达到想要的效果，但是本质是赋值的过程，而不是更改原字符串的过程。
 
-
+![](/assets/30.png)
 
 参数1代表：替换前的内容，参数2代表：替换后的内容，参数3代表：替换多少个
 
-
+![](/assets/31.png)
 
 返回的是新的字符串，并没有原位改变。
 
 c.      字母大小写转换
 
-
-
 d.     Str.format\(\)方法调用，大部分内容之前的总结里总结过了，这里查缺补漏：
-
-
-
-
 
 默认情况下，汉字左对齐，以空格填充；数字右对齐，以空格填充。
 
 如果我想要改变对齐的方向，可以使用&gt;和&lt;,大于号代表右对齐，小于号代表左对齐；
 
-
-
 f代表以浮点类型呈现，.2代表小数点后保留2位
-
-
 
 06代表长度总共是6位，并且以补0的方式显示。
 
-
-
 X，o，b分别以对应形式的进制表示。
-
-
 
