--- a/不可变序列类型.md
+++ b/不可变序列类型.md
@@ -2,7 +2,7 @@
 
 （一）元组
 
-1. 元组：tuple，用圆括号\(\)表示
+* [ ] **元组：tuple，用圆括号\(\)表示**
 
 和列表的相同点：
 
@@ -20,19 +20,19 @@
 
 2） 列表支持任意长度改变，元组是固定长度；
 
-2. 元组声明：
+* [ ] **元组声明：**
 
 ![](/assets/1.png)
 
-1. 元组元素访问：也是通过\[索引\]来访问
+* [ ] **元组元素访问：也是通过\[索引\]来访问**
 
 ![](/assets/2.png)
 
-1. 元组子元组访问：
+* [ ] **元组子元组访问：**
 
 ![](/assets/3.png)
 
-1. 通过+连接：
+* [ ] **通过+连接：**
 
 ![](/assets/4.png)
 
@@ -48,21 +48,21 @@
 
 这说明变量t指向了一个新的元组，也就是连接后的元组。与元组本身不可变的特性并不冲突。
 
-1. 支持‘\*数字’进行重复：
+* [ ] **支持‘\*数字’进行重复：**
 
 ![](/assets/7.png)
 
-1. 下一个章节讲的不管是对可变序列还是不可变序列都适用的操作在元组里也适用。
+* [ ] **下一个章节讲的不管是对可变序列还是不可变序列都适用的操作在元组里也适用。**
 
-2. 接下来我们来看几个实际上是元组特性的代码例子：
+* [ ] **接下来我们来看几个实际上是元组特性的代码例子：**
 
 ![](/assets/8.png)
 
 上面的例子中其实是一个元组，元组可以是实现同时给多个变量赋值。
 
-（二）range类型
+**（二）range类型**
 
-1. range\(\)函数的通常用途是：生成一个序列，这个序列通常用于for循环。
+* [ ] **range\(\)函数的通常用途是：生成一个序列，这个序列通常用于for循环。**
 
 看下面例子：
 
@@ -70,15 +70,15 @@
 
 注意一个细节，序列里不包含5.
 
-1. range也是一个类型，是不可变序列，不支持原位改变：
+* [ ] **range也是一个类型，是不可变序列，不支持原位改变：**
 
 ![](/assets/10.png)
 
-1. 对于序列的通用操作也适用于range类型。
+* [ ] **对于序列的通用操作也适用于range类型。**
 
 ![](/assets/11.png)
 
-1. range类型的声明：
+* [ ] **range类型的声明：**
 
 1）参数只有1个，代表终止数值，此数值并不包括在序列里。
 
@@ -92,15 +92,15 @@
 
 ![](/assets/13.png)
 
-（三）字符串str：不可变序列
+**（三）字符串str：不可变序列**
 
-1. 字面值声明：
+* [ ] **字面值声明：**
 
 ![](/assets/14.png)
 
 注意三引号字符串：保存多行信息。
 
-1. 换行转移字符：\n，Tab空格：\t
+* [ ] **换行转移字符：\n，Tab空格：\t**
 
 ![](/assets/15.png)
 
@@ -132,7 +132,7 @@ b.     第二种方法：在声明字符串的时候前面加一个r，代表忽
 
 ![](/assets/21.png)
 
-1. 字符串str的常用操作：
+* [ ] **字符串str的常用操作：**
 
 1）首先字符串常用操作中肯定包含对于那些不管是可变序列还是不可变序列都适用的操作，在下一个章节有解释。
 
