--- a/映射类型.md
+++ b/映射类型.md
@@ -14,5 +14,17 @@ d.    属于可变映射分类
 
 * [ ] **声明字典：**
 
+![](/assets/111.png)
 
+dict\(key = value\)全局函数在声明字典表的时候，要注意一下通过传递参数的形式创建，参数形式是：key = value，其中key不要加“”或者’’
+
+![](/assets/222.png)
+
+另一个声明方式是通过转换含有元组的列表
+
+![](/assets/333.png)
+
+另一个声明方式是通过将列表中元素作为keys来传递的dict方法
+
+fromkeys\(keys\)
 
