--- a/映射类型.md
+++ b/映射类型.md
@@ -1,8 +1,8 @@
-* [ ] **字典：包含任意对象的无序集合，{键（索引）：值对}，对于那些有特定标签的信息存储可用字典表保存。**
+* **字典：包含任意对象的无序集合，{键（索引）：值对}，对于那些有特定标签的信息存储可用字典表保存。**
 
 这里有一点要提出：对于字典表的键key只能是不可变元素。
 
-* [ ] **特性：**
+* **特性：**
 
 a.    包含任意类型对象，无序集合；
 
@@ -12,7 +12,7 @@ c.    可变长度，可任意嵌套；
 
 d.    属于可变映射分类
 
-* [ ] **声明字典：**
+* **声明字典：**
 
 ![](/assets/111.png)
 
