--- a/映射类型.md
+++ b/映射类型.md
@@ -30,7 +30,7 @@ fromkeys\(keys\)
 
 * **字典的常用操作**
 
-1. in判断此字典是否包含某个键
+* in判断此字典是否包含某个键
 
 ![](/assets/屏幕快照 2017-03-20 上午10.31.06.png)
 
@@ -38,7 +38,7 @@ fromkeys\(keys\)
 
 2）在书写代码的时候，注意用于判断的键要根据其数据类型书写正确，比如字符串的键要用引号标示。
 
-2. 访问字典的值时的形式：字典名\[键名\]，注意键名如果是字符串形式的话，注意别忘了单引号。
+* 访问字典的值时的形式：字典名\[键名\]，注意键名如果是字符串形式的话，注意别忘了单引号。
 
 ![](/assets/屏幕快照 2017-03-20 上午10.37.29.png)
 
@@ -46,7 +46,7 @@ fromkeys\(keys\)
 
 比如说，通过上面的访问字典的值的时候，我们必须确保你输入的键必须存在。那问题就来了，有没有其他方式能够避免这种容易产生的错误的方法访问呢？答案是，当然有。
 
-3. 字典名.get\(参数1，\[参数2\]\)
+* 字典名.get\(参数1，\[参数2\]\)
 
 ![](/assets/屏幕快照 2017-03-20 上午10.44.15.png)
 
@@ -55,8 +55,4 @@ fromkeys\(keys\)
 当然，有时候返回None并不能满足你的需求，这个时候，就可以使用到get方法的第二个参数，定义你想要程序返回的内容。当键不存在的时候，程序就会按照你定义的返回内容返回相应的值。
 
 具体可根据写代码的需求来，如果想要返回异常可以通过第一种方式访问，如果不想要返回异常，或者想要返回自己定义的内容，可以采用第二种方式访问字典中的值。
-
-
-
-
 
