--- a/映射类型.md
+++ b/映射类型.md
@@ -38,7 +38,7 @@ fromkeys\(keys\)
 
 2）在书写代码的时候，注意用于判断的键要根据其数据类型书写正确，比如字符串的键要用引号标示。
 
-* 访问字典的值时的形式：字典名\[键名\]，注意键名如果是字符串形式的话，注意别忘了单引号。
+* **访问字典的值时的形式：字典名\[键名\]，注意键名如果是字符串形式的话，注意别忘了单引号。**
 
 ![](/assets/屏幕快照 2017-03-20 上午10.37.29.png)
 
@@ -46,7 +46,7 @@ fromkeys\(keys\)
 
 比如说，通过上面的访问字典的值的时候，我们必须确保你输入的键必须存在。那问题就来了，有没有其他方式能够避免这种容易产生的错误的方法访问呢？答案是，当然有。
 
-* 字典名.get\(参数1，\[参数2\]\)
+* **字典名.get\(参数1，\[参数2\]\)**
 
 ![](/assets/屏幕快照 2017-03-20 上午10.44.15.png)
 
