--- a/映射类型.md
+++ b/映射类型.md
@@ -56,3 +56,11 @@ fromkeys\(keys\)
 
 具体可根据写代码的需求来，如果想要返回异常可以通过第一种方式访问，如果不想要返回异常，或者想要返回自己定义的内容，可以采用第二种方式访问字典中的值。
 
+* **只想得到字典表中所有的键，所有的值，或者所有的键值对，那有没有办法呢？**
+
+![](/assets/屏幕快照 2017-03-20 上午11.17.49.png)
+
+这里要注意几点：1）book.keys得到的不是一个列表，虽然和列表很想，得到的是一个视图。2）当然，我们可以将这个视图通过list转换成列表。3）如果只想遍历键的话，不需要转换成列表，可以直接通过for语法。
+
+
+
