--- a/映射类型.md
+++ b/映射类型.md
@@ -60,7 +60,13 @@ fromkeys\(keys\)
 
 ![](/assets/屏幕快照 2017-03-20 上午11.17.49.png)
 
-这里要注意几点：1）book.keys得到的不是一个列表，虽然和列表很想，得到的是一个视图。2）当然，我们可以将这个视图通过list转换成列表。3）如果只想遍历键的话，不需要转换成列表，可以直接通过for语法。
+这里要注意几点：1）book.keys得到的不是一个列表，虽然和列表很像，得到的是一个视图。2）当然，我们可以将这个视图通过list转换成列表。3）如果只想遍历键的话，不需要转换成列表，可以直接通过for语法。
+
+![](/assets/屏幕快照 2017-03-20 下午2.29.25.png)
+
+类似的方法有字典名.values\(\), 字典名.items\(\), 分别获得字典表的值和键-值对，同样得到的都是一个类似于列表的视图，都可直接遍历，也可以把相应的视图转换成列表。
+
+有一点需要注意，在遍历键-值对的时候，注意语法的使用格式。for \(k, v\) in book.items\(\): 
 
 
 
