--- a/映射类型.md
+++ b/映射类型.md
@@ -66,7 +66,9 @@ fromkeys\(keys\)
 
 类似的方法有字典名.values\(\), 字典名.items\(\), 分别获得字典表的值和键-值对，同样得到的都是一个类似于列表的视图，都可直接遍历，也可以把相应的视图转换成列表。
 
-有一点需要注意，在遍历键-值对的时候，注意语法的使用格式。for \(k, v\) in book.items\(\): 
+有一点需要注意，在遍历键-值对的时候，注意语法的使用格式。for \(k, v\) in book.items\(\):
+
+* 获得字典表键-值对对数，用len（字典表）方法。
 
 
 
