--- a/映射类型.md
+++ b/映射类型.md
@@ -68,7 +68,19 @@ fromkeys\(keys\)
 
 有一点需要注意，在遍历键-值对的时候，注意语法的使用格式。for \(k, v\) in book.items\(\):
 
-* 获得字典表键-值对对数，用len（字典表）方法。
+* **获得字典表键-值对对数，用len（字典表）方法。**
+
+* **复制字典表、清空字典表和改变字典表值：**
+
+![](/assets/屏幕快照 2017-03-20 下午2.37.09.png)
+
+因为字典表的值是通过键访问的，所以可以采用上面代码中的方法改变字典表对应的值。
+
+* **字典名1.update\(字典名2\)用于将“字典名2”合并到字典名1里，返回一个新的字典名1；其中字典名1被改变成新的字典名1，另外字典名2不改变。**
+
+![](/assets/屏幕快照 2017-03-20 下午2.41.31.png)
+
+
 
 
 
