--- a/映射类型.md
+++ b/映射类型.md
@@ -80,6 +80,10 @@ fromkeys\(keys\)
 
 ![](/assets/屏幕快照 2017-03-20 下午2.41.31.png)
 
+* **删除元素，同样有2种熟悉的方法：del 字典值，字典名.pop\(键\)**
+
+![](/assets/屏幕快照 2017-03-20 下午2.45.14.png)
+
 
 
 
