--- a/映射类型.md
+++ b/映射类型.md
@@ -84,7 +84,37 @@ fromkeys\(keys\)
 
 ![](/assets/屏幕快照 2017-03-20 下午2.45.14.png)
 
+上面代码中看到，如果输入键名称错误，代码会抛出一个异常。那如果我不想让它抛出异常，怎么办呢？
 
+同样用到的方法是 字典名.pop\(键，None\)，返回空值。
+
+![](/assets/屏幕快照 2017-03-20 下午2.48.38.png)
+
+**同样，如果你在pop的第二个参数中定义想要返回的值，也是可以的。**
+
+&gt;&gt;&gt; emp
+
+{'age': 20, 'salary': 8900.0}
+
+&gt;&gt;&gt; emp.pop\('Name', None\)
+
+
+
+&gt;&gt;&gt; emp.pop\('Name', none\)
+
+Traceback \(most recent call last\):
+
+  File "&lt;pyshell\#13&gt;", line 1, in &lt;module&gt;
+
+    emp.pop\('Name', none\)
+
+NameError: name 'none' is not defined
+
+&gt;&gt;&gt; emp.pop\('Name', 'goodness'\)
+
+'goodness'
+
+**另外，pop方法还有一个用法就是弹出键值对：**
 
 
 
