--- a/映射类型.md
+++ b/映射类型.md
@@ -98,15 +98,15 @@ fromkeys\(keys\)
 
 &gt;&gt;&gt; emp.pop\('Name', None\)
 
-
-
 &gt;&gt;&gt; emp.pop\('Name', none\)
 
 Traceback \(most recent call last\):
 
-  File "&lt;pyshell\#13&gt;", line 1, in &lt;module&gt;
+File "&lt;pyshell\#13&gt;", line 1, in &lt;module&gt;
 
-    emp.pop\('Name', none\)
+```
+emp.pop\('Name', none\)
+```
 
 NameError: name 'none' is not defined
 
@@ -115,6 +115,28 @@ NameError: name 'none' is not defined
 'goodness'
 
 **另外，pop方法还有一个用法就是弹出键值对：**
+
+![](/assets/屏幕快照 2017-03-20 下午2.53.53.png)
+
+从返回的结果可知，默认返回的是第一个键值对。这时候你是不是在想，如果我给popitem\(\)一个键名参数，它是否可以弹出指定的键-值对呢？我们可以试一下。
+
+&gt;&gt;&gt; emp
+
+{'age': 20, 'salary': 8900.0}
+
+&gt;&gt;&gt; emp.popitem\('salary'\)
+
+Traceback \(most recent call last\):
+
+  File "&lt;pyshell\#16&gt;", line 1, in &lt;module&gt;
+
+    emp.popitem\('salary'\)
+
+TypeError: popitem\(\) takes no arguments \(1 given\)
+
+**从结果里可以发现，popitem\(\)是没有参数的，默认弹出第一个键-值对。也就是说其实际作用是，不断的从第一个键-值对弹出，并删除。**
+
+
 
 
 
