--- a/映射类型.md
+++ b/映射类型.md
@@ -128,13 +128,19 @@ NameError: name 'none' is not defined
 
 Traceback \(most recent call last\):
 
-  File "&lt;pyshell\#16&gt;", line 1, in &lt;module&gt;
+File "&lt;pyshell\#16&gt;", line 1, in &lt;module&gt;
 
-    emp.popitem\('salary'\)
+```
+emp.popitem\('salary'\)
+```
 
 TypeError: popitem\(\) takes no arguments \(1 given\)
 
 **从结果里可以发现，popitem\(\)是没有参数的，默认弹出第一个键-值对。也就是说其实际作用是，不断的从第一个键-值对弹出，并删除。**
+
+* **字典表的另一个比较灵活的用法是：把具有行为模式的类型比如函数，传递给字典表中的值。接下来我们看一下用法：**
+
+![](/assets/屏幕快照 2017-03-20 下午3.02.22.png)
 
 
 
