--- a/映射类型.md
+++ b/映射类型.md
@@ -142,7 +142,9 @@ TypeError: popitem\(\) takes no arguments \(1 given\)
 
 ![](/assets/屏幕快照 2017-03-20 下午3.02.22.png)
 
+1）首先，我们定义了一个简单的函数，名字为say\_hello\(\);
 
+2\)接下来，我们把这个函数的名字放在了字典表值的位置。这里需要注意，我们只是把函数名的前一部分即并没有带括号\(\)，这表明我们只是把这个函数的引用传递给了这个键对应的值上，并不是立刻执行的函数行为。
 
 
 
