--- a/映射类型.md
+++ b/映射类型.md
@@ -146,5 +146,25 @@ TypeError: popitem\(\) takes no arguments \(1 given\)
 
 2\)接下来，我们把这个函数的名字放在了字典表值的位置。这里需要注意，我们只是把函数名的前一部分即并没有带括号\(\)，这表明我们只是把这个函数的引用传递给了这个键对应的值上，并不是立刻执行的函数行为。
 
+那我们看一下，如果带括号\(\)的传递是一种什么结果：
+
+&gt;&gt;&gt; def say\_hello\(\):
+
+	print\('Hello youpinketang'\)
+
+	
+
+&gt;&gt;&gt; person = {'name':'Jerry', 'hello':say\_hello\(\)}
+
+Hello youpinketang
+
+这样就会直接输出函数的执行结果，那person字典表是否被声明了呢？我们来看一下：
+
+&gt;&gt;&gt; person
+
+{'name': 'Jerry', 'hello': None}
+
+因为这个函数执行后并没有返回任何变量，所以person字典表对应的值是None
+
 
 
