--- a/映射类型.md
+++ b/映射类型.md
@@ -150,9 +150,9 @@ TypeError: popitem\(\) takes no arguments \(1 given\)
 
 &gt;&gt;&gt; def say\_hello\(\):
 
-	print\('Hello youpinketang'\)
-
-	
+```
+print\('Hello youpinketang'\)
+```
 
 &gt;&gt;&gt; person = {'name':'Jerry', 'hello':say\_hello\(\)}
 
@@ -165,6 +165,10 @@ Hello youpinketang
 {'name': 'Jerry', 'hello': None}
 
 因为这个函数执行后并没有返回任何变量，所以person字典表对应的值是None
+
+那问题又来了：是否我定义一个返回变量的函数，字典表值就有返回的值呢？你可以自己试一下。我们接着往下讲
+
+3）接下来person
 
 
 
