--- a/映射类型.md
+++ b/映射类型.md
@@ -168,7 +168,11 @@ Hello youpinketang
 
 那问题又来了：是否我定义一个返回变量的函数，字典表值就有返回的值呢？你可以自己试一下。我们接着往下讲
 
-3）接下来person
+3）接下来person这个字典表就被声明好了，那如果我访问这个值会是什么结果呢？
+
+如上面代码结果可知，如果只是按照平常输入键名的方式访问对应的值，会返回一个&lt;funciton say\_hello at 0x01868618&gt;这只是在告诉你这是一个函数引用。
+
+4）那如果想让函数的执行结果返回，需要在后面加上一个括号（）。person.get\('name'\)\(\)
 
 
 
